--- a/trade-service/pom.xml
+++ b/trade-service/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>hm-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <!--消息发送-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
